--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ text-decoration: none;
 <a href="https://www.uygulamalarevreni.com/projects.html"> My Projects </a>  
 </li>  
 <li>  
-<a href="https://discord.gg/invites"> Join Us </a>  
+<a href="https://discord.gg/freebadge"> Join Us </a>  
 </li>  
 </ul>  
 </nav>  
