Your branch is up to date with 'origin/main'.  Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ text-decoration: none;
 </ul>  
 </nav>  
 </header>  
-Welcome Uygulamalar Evreni 👋👋
-This Website İs Not Finished
+<h1>Welcome Uygulamalar Evreni 👋👋This Website İs Not Finished</h1>
 </Body>   
 </Html>  
