Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@ text-decoration: none;
 </ul>  
 </nav>  
 </header>  
-<h1>Welcome Uygulamalar Evreni 👋👋This Website İs Not Finished</h1>
+<h1>Welcome My Website 👋</h1>
 </Body>   
 </Html>  
