--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta content="Embed Title" property="og:title" />
-    <meta content="Site Description" property="og:description" />
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="Welcome Uygulamalar Evreni 👋👋" property="og:title" />
+    <meta content="İm Making Projects And Sharing On This Website" property="og:description" />
+    <meta content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png?size=1024" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
