--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta content="Uygulamalarevreni" property="og:title" />
     <meta content="İm Making Projects And Sharing On This Website" property="og:description" />
-    <meta content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png?size=1024" property="og:image" />
+    <meta content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
