--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta content="Uygulamalarevreni" property="og:title" />
-    <meta content="İm Making Projects And Sharing On This Website" property="og:description" />
-    <meta content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="author" content="[Your name]">
+    <meta name="application-name" content="Welcome Uygulamalr Evreni">
+    <meta name="description" content="hi👋">
+    
+    <!-- app thumbnail -->
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
