--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="author" content="[Your name]">
+    <meta name="author" content="Charlis">
     <meta name="application-name" content="Welcome Uygulamalr Evreni">
     <meta name="description" content="hi👋">
     
