--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h2>Welcome My Website</h2><p>Hello Guys Welcome to My Website I Will Share My Projects On This Website     </p></section>
         <section>
           <h2>About Me</h2>
-            <p>Hello Users İ Dont Share My Real Name But You Can Call Me Charlis İm 14 Years Old İm Learning Coding Languages My English Some Good</p></section>
+            <p>Hello Users İ Dont Share My Real Name But You Can Call Me Charlis İm 14 Years Old İm Learning Coding Languages My English Is A Little Good</p></section>
         <section>
           <h2>My Projects</h2>
           <p>I Haven't Finished A Project Yet :(</p></section>
