--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="author" content="Charlis">
+    <meta name="application-name" content="Welcome Uygulamalrevreni 👋👋">
+    <meta name="description" content="Hi">
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Welcome My Website 👋👋</title>
-
-    <meta name="author" content="Codeconvey" />
-    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/demo.css" />
 	
