--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="author" content="Charlis">
-    <meta name="application-name" content="Welcome Uygulamalrevreni 👋👋">
+    <meta name="application-name" content="Welcome My Website 👋👋">
     <meta name="description" content="Hi">
     <meta property="og:image" content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png">
     <meta charset="UTF-8" />
