--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="author" content="Charlis">
     <meta name="application-name" content="Welcome My Website 👋👋">
-    <meta name="description" content="Hi">
+    <meta name="description" content="Im Charlis">
     <meta property="og:image" content="https://cdn.discordapp.com/avatars/1073700711466025030/958ab7a53166b256c34a8359a45c1c0c.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
