--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p>I Haven't Finished A Project Yet :(</p></section>
     <section>
           <h2>My Discord Server</h2>
-         <p><a href="https://discord.gg/PpeAh89qTt">Click And Redirect To Discord Server Link</a> </p></section>
+         <p><a href="https://discord.gg/YcMRW8dGaP">Click And Redirect To Discord Server Link</a> </p></section>
   </div>
 </div>
 <!-- End Tabs HTML -->
