--- a/The-Eye-Closer.html
+++ b/The-Eye-Closer.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="The Eye Closer">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="The-Eye-Closer.html" data-home-page-title="The Eye Closer" class="u-body u-xl-mode" data-lang="tr">
+  <body class="u-body u-xl-mode" data-lang="tr">
     <section class="-lg -md -xl -xs u-align-left u-black u-clearfix u-section-1" src="" id="sec-e1fb">
       <div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com/templates" class="u-black u-border-none u-btn u-button-style u-text-custom-color-1 u-btn-1"><span class="u-icon u-text-custom-color-1 u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><polygon points="256,152.96 79.894,288.469 79.894,470.018 221.401,470.018 221.401,336.973 296.576,336.973 296.576,470.018 432.107,470.018 432.107,288.469"></polygon><polygon points="439.482,183.132 439.482,90.307 365.316,90.307 365.316,126.077 256,41.982 0,238.919 35.339,284.855 256,115.062 476.662,284.856 512,238.92"></polygon></svg><img></span> Home<br>
